--- a/stickman-rugby-site/index.html
+++ b/stickman-rugby-site/index.html
@@ -170,10 +170,17 @@
         <img src="images/screenshot7.png" alt="Gameplay screenshot 7">
       </div>
       <div class="video-preview">
-        <video controls poster="images/video-poster.png">
-          <source src="videos/gameplay.mp4" type="video/mp4" />
-          Your browser does not support HTML5 video.
-        </video>
+        <div class="video-preview">
+  <iframe
+    width="100%"
+    height="450"
+    src="https://youtu.be/zNvcO3SEQ6I"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+  </iframe>
+</div>
+
       </div>
     </section>
 
