--- a/stickman-rugby-site/index.html
+++ b/stickman-rugby-site/index.html
@@ -158,28 +158,29 @@
     </section>
 
     <!-- MEDIA PREVIEW -->
-    <section class="media-preview">
-      <h2>See Stickman Rugby in Action</h2>
-      <div class="image-gallery">
-        <img src="images/screenshot1.png" alt="Gameplay screenshot 1">
-        <img src="images/screenshot2.png" alt="Gameplay screenshot 2">
-        <img src="images/screenshot3.png" alt="Gameplay screenshot 3">
-        <img src="images/screenshot4.png" alt="Gameplay screenshot 4">
-        <img src="images/screenshot5.png" alt="Gameplay screenshot 5">
-        <img src="images/screenshot6.png" alt="Gameplay screenshot 6">
-        <img src="images/screenshot7.png" alt="Gameplay screenshot 7">
-      </div>
-      <div class="video-preview">
-  <video controls poster="images/video-poster.png">
-    <source src="videos/gameplay.mp4"  type="video/mp4">
-    <!-- Fallback clickable image/link -->
-    <a href="videos/gameplay.mp4" target="_blank">
-      <img src="images/video-poster.png" alt="Play Gameplay Video" style="width:100%;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,0.3);">
-    </a>
-  </video>
-</div>
-
-    </section>
+<section class="media-preview">
+  <h2>See Stickman Rugby in Action</h2>
+  <div class="image-gallery">
+    <img src="images/screenshot1.png" alt="Gameplay screenshot 1">
+    <img src="images/screenshot2.png" alt="Gameplay screenshot 2">
+    <img src="images/screenshot3.png" alt="Gameplay screenshot 3">
+    <img src="images/screenshot4.png" alt="Gameplay screenshot 4">
+    <img src="images/screenshot5.png" alt="Gameplay screenshot 5">
+    <img src="images/screenshot6.png" alt="Gameplay screenshot 6">
+    <img src="images/screenshot7.png" alt="Gameplay screenshot 7">
+  </div>
+  <div class="video-preview">
+    <iframe 
+      width="100%" 
+      height="450" 
+      src="https://youtu.be/zNvcO3SEQ6I" 
+      title="Stickman Rugby Gameplay" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      allowfullscreen>
+    </iframe>
+  </div>
+</section>
 
     <!-- DOWNLOAD BUTTONS -->
     <div class="download-buttons">
