--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
     <iframe 
       width="100%" 
       height="450" 
-      src="https://youtu.be/zNvcO3SEQ6I" 
+      src="https://www.youtube.com/embed/zNvcO3SEQ6I"
+ 
       title="Stickman Rugby Gameplay" 
       frameborder="0" 
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
